--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -4,5 +4,8 @@ generate_grpc_code_windows:
 generate_grpc_code_linux:
 	protoc --go_out=api/core/grpc --go_opt=paths=source_relative --go-grpc_out=api/core/grpc --go-grpc_opt=paths=source_relative --proto_path=/mnt/c/dev/freelance/customerService/api/ customerService.proto
 
-generate_docker_image:
+first_build_docker_image:
+	docker build . -t grpc-costumer-service:latest
+
+run_docker_image:
 	docker run -e PORT=3001 -p 3001:3001 grpc-costumer-service:latest
